Edits up to 6.4.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -496,13 +496,13 @@ Log data show participants displaying restricted head movement throughout the pa
 
 \label{chapter-eval-2}
 
-The first stage of investigation with the Mirrorshades platform demonstrated that applying a parallel reality system to a cultural heritage scenario provides an experience that is both more enjoyable and more engaging than a stationary virtual heritage scenario making use of immersive VR presentation via CAVE or HMD, and also leads participants to a greater understanding of the relationships between the RW and VR content presented to them. This chapter recounts investigations into how certain aspects of the Mirrorshades platform affect the overall experience of parallel reality and the findings are used to establish a set of best practices for informing future parallel reality implementations. These investigations explore the way that transitions between RW and VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW and VR, aspects identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct effect upon the severity of the break in presence experienced when performing such transitions.
+The first stage of investigation with the Mirrorshades platform demonstrated that applying a parallel reality system to a cultural heritage scenario provides an experience that is both more enjoyable and more engaging than a seated virtual heritage scenario making use of immersive VR presentation via CAVE or HMD, and also leads participants to a greater understanding of the relationships between the RW and VR content presented to them. This chapter recounts investigations into how certain aspects of the Mirrorshades platform affect the overall experience of parallel reality and the findings are used to establish a set of best practices for informing future parallel reality implementations. These investigations explored the way that transitions between RW and VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW and VR, aspects identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct effect upon the severity of the break in presence experienced when performing these transitions.
 
 %=========================================================================================================
 
 \section{Overview}
 
-Stage 2 of the investigation comprises two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations along the locus of attention axis. Stage 2.1 investigates oscillations wherein the default view is 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks at oscillations wherein the default view is a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the investigation comprised two parts. The first, stage 2.1, focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). The second, stage 2.2, looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations along the locus of attention axis. Stage 2.1 investigated oscillations wherein the default view was 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looked at oscillations wherein the default view was a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant could reach (such as in figure \ref{transition-mix-vr.png}).
 
 While stage 1 of the investigation saw the suitability of applying a parallel reality platform to the particular use case of virtual heritage, stage 2 while still making use of the same virtual heritage scenario has wider ranging implications for informing implementation of parallel reality systems in general.
 
@@ -518,31 +518,45 @@ While stage 1 of the investigation saw the suitability of applying a parallel re
 
 \section{Investigation Techniques}
 
-As with the stage 1 investigation a range of both qualitative and quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW and VR visual stimuli pertains to studying their reactions and responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature and highly subjective~\cite{Ijsselsteijn2001}. Subjective measures thus produced the bulk of the data for evaluation, however they are once again backed up by objective log data to support or contradict emerging relationships.
+As with the stage 1 investigation a range of both qualitative and quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW and VR visual stimuli pertains to studying their reactions and responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature and highly subjective~\cite{Ijsselsteijn2001}. Subjective measures thus produced the bulk of the data for evaluation, however they were once again backed up by objective log data to support or contradict emerging relationships.
 
 Stage 2 participants completed the same pre-task questionnaire as stage 1 participants and Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-2-1}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{appendix-9-item-likert-type-questionnaire-stage-2-2}). The SUS questionnaire was not used, while post-task interviews (prompts included as appendices \ref{appendix-interview-questions-stage-2-1} and \ref{appendix-interview-questions-stage-2-2} for stages 2.1 and 2.2 respectively) and logging were present. In addition to the Likert-type questionnaire all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
 
 As presence does not have a single widely agreed upon definition and those definitions that are commonly used are subjective in nature due to the fact that presence (whether in physical or virtual environments) is perceptual~\cite{Waterworth2014}, attempts to quantify or `measure' the experience of presence are met with difficulty. Many different approaches have been adopted, some of which are more or less suitable to certain scenarios than others. These approaches can be broadly categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
-Under these categories one can consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence and the interview and Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparison is made between different styles of transition in hopes of ascertaining which result in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques in order to inquire more directly about this aspect of the experience and to do so in a standardised fashion.
+Under these categories one can consider the log data recorded by the Mirrorshades platform to provide a behavioural insight into the participants' sense of presence and the interview and Likert-type questionnaires to provide a subjective insight. For this second stage of evaluation where direct comparisons were made between different styles of transition in hopes to ascertain which resulted in less pronounced breaks in presence, the use of an established presence questionnaire was deemed a prudent addition to the evaluation techniques in order to inquire more directly about this aspect of the experience and to do so in a standardised fashion.
 
 %=========================================================================================================
 
 \subsection{Presence Questionnaires}
 
-Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but instead complimentary and we do not wish for the user to `forget' about either `sensory world'. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem.
+Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}, where a break in presence can result from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
 
-The effect of the complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010}, proprioceptive, perceptual and reflective, which builds upon Damasio's evolutionary levels of selfhood~\cite{Damasio1999} and reasons that;
+However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but instead complimentary and we do not wish for the user to `forget' about either `sensory world'. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem. The effect of this complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010, Giuseppe2014} that constitute:
+
+\begin{enumerate}
+
+\item \textbf{Proprioceptive or `proto' presence}, which is concerned with the correct coupling of perceptions and movements, with high proprioception-action coupling leading to heightened embodied presence.
+
+\item \textbf{Perceptual or `core' presence}, as the ability of a subject to identify the external world and its current tasks in that world as separate from the self.
+
+\item \textbf{Reflective or `extended' presence}, as the ability of a subject to verify to itself the significance of experienced events in the external world and which leads to the ability to experience absence, situated at one extreme of the focus of attention axis, as \textit{``presence in an exclusively mental activity''}~\cite{Giuseppe2014}.
+
+\end{enumerate}
+
+Each of these three levels is associated with one of Damasio's evolutionary levels of selfhood~\cite{Damasio1999} and the Waterworths' reasoning leads to the position that;
 
 \begin{quote}
 \textit{``Presence is maximised when all three layers are integrated around the same external situation, whether this is physical reality, virtual reality, or a mixture of the two.''}~\cite{Mantovani2010}
 \end{quote}
 
-While RW experiences rarely feature conflict between the proprioceptive and core presence layers, VR experiences often present such conflict due to mismatch between physical actions and perceived (virtual) results owing to the conflicting content of the two environments. A parallel reality system whose two constituent environments share high spatial equivalence however, should not present such a mismatch between proprioceptive and core presence layers.
+While RW experiences rarely feature conflict between the proto-presence and core presence layers, VR experiences often present such conflict due to mismatch between physical actions and perceived (virtual) results owing to the conflicting content of the two environments. A parallel reality system whose two constituent environments share high spatial equivalence however, should not present such a mismatch between proto- and core presence layers.
 
-The implication this has upon the suitability of established presence questionnaires is perhaps best explained as a difference in the use of the term `presence', with many authors using the term to mean only mediated presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}, a situation which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence, considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}), is a shift upon the locus of attention axis from VR to RW. In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studies the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
+The implication this has upon the suitability of established presence questionnaires is perhaps best illustrated by appreciation of the lack of consensus when it comes to the definition of the term `presence'~\cite{Calleja2014}, with many questionnaire authors using the term to mean only \textit{mediated} presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}. Visualised using the combined Milgram/Waterworth model, established presence questionnaires in this vein largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence is here considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}) as a shift upon the locus of attention axis from VR to RW.
 
-Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needs to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a parallel reality scenario. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim was to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studied the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
+
+Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needed to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment were thus unsuitable for use in assessment of a parallel reality scenario. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
 
 Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that used in an experiment by Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment with a neutral questioning tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising incompatibility and separateness.
 
@@ -550,15 +564,15 @@ Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses 
 
 \subsection{The Igroup Presence Questionnaire}
 \label{igroup-presence-questionnaire-explanation}
-The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
+The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
 
-For a well implemented full immersion VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible in the VR environment.
+For a well implemented full immersion VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible there.
 
 However in a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV may not demonstrate. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment.
 
 A conservative expectation for the results of the IPQ when applied to a parallel reality scenario would be for generally lower INV scores than a full immersion VR scenario but without drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality scenario would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
 
-Although a traditional view of augmented reality is that it aims to enhance the sense of presence in the physical world~\cite{Waterworth2014}, this does not necessarily stand as an aim of parallel reality. This is due to the fact that instead of augmenting the primary environment of the user's RW surroundings parallel reality instead presents the user with two separate (debatably both or alternatingly `primary') environments.
+Although a traditional view of augmented reality is that it aims to enhance the sense of presence in the physical world~\cite{Waterworth2014}, this does not necessarily stand as an aim of parallel reality. This is due to the fact that instead of augmenting the primary environment of the user's RW surroundings, parallel reality instead presents the user with two separate (debatably both or alternatingly `primary') environments.
 
 %=========================================================================================================
 
@@ -571,28 +585,28 @@ Although a traditional view of augmented reality is that it aims to enhance the 
 
 \section{Stage 2.1 - Evaluating Transition styles}
 
-A similar approach was used by the stage 2.1 investigation as was used by the stage 1 investigation. Participants first received a full immersion VR experience by using the DK1 and Xbox controller to explore the VR chapel while seated and subsequently completed the IPQ. This served both to acclimatize participants to the DK1 (in a similar vein as the use of the Tuscany demo in the stage 1 evaluation) and to produce baseline IPQ results for a full immersion VR experience of the chapel model experienced via the DK1 where RW stimuli were intentionally suppressed. Participants then performed two parallel reality scenarios in which they walked through the RW/VR chapels in a similar manner to the parallel reality scenario in stage 1 (see figure \ref{participant-m.jpg}), thus completing three scenarios in total;
+The stage 2.1 investigation was conducted using a similar approach as that employed by stage 1. Participants first received a full immersion VR experience by using the DK1 and Xbox controller to explore the VR chapel while seated and subsequently completed the IPQ. This served both to acclimatize participants to the DK1 (in a similar vein as the use of the Tuscany demo in the stage 1 evaluation) and to produce baseline IPQ results for a full immersion VR experience of the chapel model using the DK1 where RW stimuli were intentionally suppressed. Participants then performed two parallel reality scenarios in which they walked through the RW/VR chapels (see figure \ref{participant-m.jpg}) in a similar manner to the parallel reality scenario in stage 1, thus completing three scenarios in total:
 
 \begin{enumerate}
-	\item \textbf{Seated VR scenario} - Participants explore the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring theier view of the RW chapel around them.
-	\item \textbf{Parallel reality scenario with transitions 1-3} - Participants experience the RW and VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen is 100\% RW and they are granted access to 3x different transition styles;
+	\item \textbf{Seated VR scenario} - Participants explored the VR chapel from a seated position, as VR has already come to be employed at cultural heritage sites via CAVE installations and by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring theier view of the RW chapel around them.
+	\item \textbf{Parallel reality scenario with transitions 1-3} - Participants experienced the RW and VR chapels in tandem using the Mirrorshades platform. They wore the DK1, held the Xbox controller in their right hand and the smartphone in their left, with the laptop and control box bundle in a satchel worn over a shoulder. The default view on the DK1 screen was 100\% RW and they were granted access to 3x different transition styles;
 	\begin{enumerate}
 		\item Hard switch (section \ref{sub-hardswitch}) mapped to controller \texttt{[A]} button (transition 1).
 		\item Transition with linear interpolation (section \ref{transition-with-linear-interpolation}) mapped to controller \texttt{[B]} button (transition 2).
 		\item Analogue selectable opacity (section \ref{analogue-selectable-opacity}) mapped to controller right trigger \texttt{[RT]} (transition 3).
 \end{enumerate}
-	\item \textbf{Parallel reality scenario with transitions 1-4} - Participants experience the same scenario as scenario 3, however this time with the introduction of the periodic hard switch (section \ref{subsub-periodic}, transition 4) which triggers a 0.15 second transition to 100\% VR every 3 seconds. The 3 second timer is reset each time the user manually triggers a transition using any one of transitions 1-3.
+	\item \textbf{Parallel reality scenario with transitions 1-4} - Participants experienced the same scenario as scenario 2, however this time with the introduction of the periodic hard switch (section \ref{subsub-periodic}, transition 4) which would trigger a 0.15 second transition to 100\% VR every 3 seconds. The 3 second timer was reset each time the user manually triggered a transition using any one of transitions 1-3.
 \end{enumerate}
 
-In the parallel reality scenario with transitions 1-3 pressing and holding the \texttt{[A]} button triggered a hard switch from 100\% RW to 100\% VR, pressing and holding the \texttt{[B]} button triggered a linear interpolated switch from 100\% RW to 100\% VR and pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled (pulling the trigger all the way in would reduce the opacity of the objects to 0\% and thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% and thus display 66\% RW and 33\% VR, etc.). In the parallel reality scenario with transitions 1-4 participants were granted access to the same 3x transitions via the Xbox controller and additionally the 4th transition of the periodic hard switch was triggered every 3 seconds for a duration of 0.15 seconds. These two scenarios are referred to as `scenario 1-3' and `scenario 1-4' respectively in the following discussion.
+In the parallel reality scenario with transitions 1-3 pressing and holding the \texttt{[A]} button triggered a hard switch from 100\% RW to 100\% VR, pressing and holding the \texttt{[B]} button triggered a linear interpolated switch from 100\% RW to 100\% VR and pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the video see-through camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled (pulling the trigger all the way in would reduce the opacity of the objects to 0\% and thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% and thus display 66\% RW and 33\% VR, etc.). In the parallel reality scenario with transitions 1-4 participants were granted access to the same 3x transitions via the Xbox controller and additionally the 4th transition of the periodic hard switch was triggered every 3 seconds for a duration of 0.15 seconds. These two scenarios are referred to as `scenario 1-3' and `scenario 1-4' respectively in the following discussion.
 
-Rather than describing a path through the chapel with particular positions of interest to stop and look around at, participants were simply told to slowly make their way from the starting position at the West end of the chapel down to the altar at the East end of the chapel. During the stage 1 investigation participants' exploration sometimes seemed to be restrained by their adherence to the prescribed route. In order to promote a more natural style of exploration the route description was thus removed from the second stage of the investigations.
+Rather than describing a path through the chapel with particular positions of interest to stop and look around at, participants were simply told to slowly make their way from the starting position at the West end of the chapel down to the altar at the East end of the chapel. During the stage 1 investigation participants' exploration sometimes seemed to be restrained by their adherence to the prescribed route. In order to promote a more natural style of exploration the use of a roughly prescribed route was removed from the second stage of the investigations.
 
 %=========================================================================================================
 
 \section{Stage 2.1 Results}
 
-A total of 7 participants completed the stage 2.1 evaluation;
+A total of 7 participants completed the stage 2.1 evaluation:
 \begin{itemize}
 	\item Age ranged from 18 to 27, with a mean of 22.3 and a standard deviation of 4.
 	\item 5x identified as male and 2x as female.
