--- a/bib.bib
+++ b/bib.bib
@@ -583,6 +583,16 @@ title = {{An experience using X3D for virtual cultural heritage}},
 url = {http://doi.acm.org/10.1145/1229390.1229419},
 year = {2007}
 }
+@incollection{Calleja2014,
+author = {Calleja, G},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {13},
+editor = {Grimshaw, M},
+pages = {222--236},
+publisher = {Oxford University Press},
+title = {{Immersion in Virtual Worlds}},
+year = {2014}
+}
 @misc{Camera,
 author = {Camera, Dean},
 title = {{Four Walled Cubicle - LUFA (Formerly MyUSB)}},
@@ -732,15 +742,15 @@ pages = {1--7},
 title = {{Indoor Positioning System Using Accelerometry and High Accuracy Heading Sensors}},
 year = {2003}
 }
-@misc{Constantin2003,
-author = {Constantin, Corina},
-title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence}},
-year = {2003}
-}
 @misc{Constantin2003a,
 author = {Constantin, Corina},
 file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Constantin - 2003 - Virtual Environments and the Sense of Being There An SEM Model of Presence Extended abstract submitted for presentat.pdf:pdf},
 pages = {1--18},
+title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence}},
+year = {2003}
+}
+@misc{Constantin2003,
+author = {Constantin, Corina},
 title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence}},
 year = {2003}
 }
@@ -864,7 +874,7 @@ year = {2013}
 }
 @inproceedings{deamicis:gamebased,
 address = {New York, NY, USA},
-annote = {From Duplicate 2 ( Game based technology to enhance the learning of history and cultural heritage - De Amicis, Raffaele; Girardi, Gabrio; Andreolli, Michele; Conti, Giuseppe )Abstract only that talks about the use of game technologies to support learning of users within cultural heritage sites. Says that the level of realism is ideal to visualise cultural heritage if a string focus on the environment's atmosphere \& immersion is required, "emphasising environmental effects such as fog, sky, water, particles", all of which self-proclaimed virtual worlds aren't as good at.Uses Unity3D! Mentions that it can produce web browser based applications as well as standalone ones, has a simple authoring interface \& "exploits the latest graphical hardware by making extensive use of shaders to deliver high quality graphics".},
+annote = {From Duplicate 2 ( Game based technology to enhance the learning of history and cultural heritage - De Amicis, Raffaele; Girardi, Gabrio; Andreolli, Michele; Conti, Giuseppe )},
 author = {{De Amicis}, Raffaele and Girardi, Gabrio and Andreolli, Michele and Conti, Giuseppe and Amicis, Raffaele De},
 booktitle = {Proceedings of the International Conference on Advances in Computer Enterntainment Technology},
 doi = {http://doi.acm.org/10.1145/1690388.1690499},
@@ -1292,6 +1302,16 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17677199},
 volume = {75},
 year = {2007}
 }
+@incollection{Giuseppe2014,
+author = {Giuseppe, Riva and Waterworth, J A},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {12},
+editor = {Grimshaw, M},
+pages = {205--221},
+publisher = {Oxford University Press},
+title = {{Being Present in a Virtual World}},
+year = {2014}
+}
 @misc{Google2012,
 author = {Google},
 title = {{My Tracks - Android Apps on Google Play}},
@@ -1361,17 +1381,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Hart,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-04-01}
-}
 @misc{Harta,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-03-31}
+}
+@misc{Hart,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-04-01}
 }
 @inproceedings{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -2856,15 +2876,6 @@ pages = {165--174},
 title = {{Supporting interoperability and presence awareness in collaborative mixed reality environments}},
 year = {2013}
 }
-@article{Papagiannakis2009,
-abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
-author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
-journal = {Arqueologica 2.0},
-pages = {16--20},
-title = {{Recreating Daily Life in Pompeii}},
-volume = {1},
-year = {2009}
-}
 @article{Papagiannakis2007,
 abstract = {We propose a new methodology for real-time mobile mixed reality systems that feature realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. Although ini- tially targeted at Cultural Heritage Sites, the paradigm is by no means limited to such subjects. The abandonment of traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations with 3D, interactive, augmented histori- cal character-based event representations in a mobile and wearable setup, is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with character to object interaction, a markerless camera tracker specialized for non-invasive geometrical registration on heritage sites and a PRT mixed reality illumination model for more consistent real-virtual real-time rendering. We demonstrate a real-time case study on the actual site of ancient Pompeii. PDF},
 author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
@@ -2877,6 +2888,15 @@ title = {{Mobile Augmented Heritage: Enabling Human Life in Ancient Pompeii}},
 url = {http://openurl.ingenta.com/content/xref?genre=article\&issn=1478-0771\&volume=5\&issue=2\&spage=396},
 volume = {5},
 year = {2007}
+}
+@article{Papagiannakis2009,
+abstract = {We propose an integrated Mixed Reality methodology for recreating ancient daily life that features realistic simulations of animated virtual human actors (clothes, body, skin, face) who augment real environments and re-enact staged storytelling dramas. We aim to go further from traditional concepts of static cultural artifacts or rigid geometrical and 2D textual augmentations and allow for 3D, interactive, augmented historical character-based event representations in a mobile and wearable setup. This is the main contribution of the described work as well as the proposed extensions to AR Enabling technologies: a VR/AR character simulation kernel framework with real-time, clothed virtual humans that are dynamically superimposed on live camera input, animated and acting based on a predefined, historically correct scenario. We demonstrate such a real-time case study on the actual site of ancient Pompeii.},
+author = {Papagiannakis, George and Magnenat-Thalmann, Nadia},
+journal = {Arqueologica 2.0},
+pages = {16--20},
+title = {{Recreating Daily Life in Pompeii}},
+volume = {1},
+year = {2009}
 }
 @article{Papagiannakis2005,
 abstract = {This paper presents an innovative 3D reconstruction of ancient fresco paintings through the real-time revival of their fauna and flora, featuring groups of virtual animated characters with artificial-life dramaturgical behaviours in an immersive, fully mobile augmented reality (AR) environment. The main goal is to push the limits of current AR and virtual storytelling technologies and to explore the processes of mixed narrative design of fictional spaces (e.g. fresco paintings) where visitors can experience a high degree of realistic immersion. Based on a captured/real-time video sequence of the real scene in a video-see-through HMD set-up, these scenes are enhanced by the seamless accurate real-time registration and 3D rendering of realistic complete simulations of virtual flora and fauna (virtual humans and plants) in a real-time storytelling scenario-based environment. Thus the visitor of the ancient site is presented with an immersive and innovative multi-sensory interactive trip to the past. Copyright (c) 2005 John Wiley T Sons, Ltd.},
@@ -3854,6 +3874,12 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as ``Space of Illusion'' in Museum Displays}},
 year = {2002}
 }
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
+}
 @misc{U-bloxAGa,
 author = {u-blox AG},
 title = {{u-center GPS evaluation software}},
@@ -3865,12 +3891,6 @@ author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
-}
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {From Duplicate 1 ( EOLUS Makes Leap To 3D Internet On Second Life - UgoTrade )},
@@ -3956,9 +3976,6 @@ volume = {4},
 year = {2011}
 }
 @misc{Venables2013,
-annote = {Quote from Palmer Luckey
-        
-'Luckey always shared his plans online to the few stalwarts of the then-small, virtual reality scene "since it kind of crashed in the 90s" he qualifies.'},
 author = {Venables, Michael},
 booktitle = {Forbes},
 title = {{Eve: Valkyrie -- The Future Of Immersive Virtual Reality Gaming Experience}},
